@@ -1,5 +1,6 @@
 package org.agoncal.sample.mcp.migration.legacy;
 
+import java.net.URI;
 import java.net.URL;
 import java.security.KeyStore;
 import java.util.Locale;
@@ -17,7 +18,7 @@ public class LegacyCode2 {
     }
 
     public void useDeprecatedURLConstructor() throws Exception {
-        URL url = new URL("http://example.com");
+        URL url = URI.create("http://example.com").toURL();
         System.out.println("URL: " + url);
     }
 }
